2008-10-01  David Zeuthen  <davidz@redhat.com>

	* README.in: Add "Notes about glib 2.20" section detailing the
	ramifications of the patch from bug #528670.

2008-09-30  Behdad Esfahbod  <behdad@gnome.org>

	Bug 554092 – glib doesn't return G_FILE_ERROR_NOENT et al on OS X

	* glib/giounix.c (g_io_unix_read), (g_io_unix_write),
	(g_io_unix_seek), (g_io_unix_close), (g_io_unix_set_flags),
	(g_io_unix_get_flags), (g_io_channel_new_file):
	Like mclasen says: "well, thats the way errno works...,
	save it or loose it".  Save errno.

2008-09-30  Tor Lillqvist  <tml@novell.com>

	* Makefile.decl
	* glib/tests/Makefile.am: Bypass gtester related stuff on Windows.

2008-09-30  Tor Lillqvist  <tml@novell.com>

	* glib/gprintf.c
	* glib/gnulib/vasnprintf.c: Don't define _GNU_SOURCE on Windows,
	as _GNU_SOURCE has unintended side effects when compiling against
	newest mingw headers.

2008-09-26  Dan Winship  <danw@gnome.org>

	Bug 553447 – g_assert_no_error()

	* glib/gtestutils.h (g_assert_no_error, g_assert_error): Macros to
	assert that a GError is not set, or else is set to a particular
	error.

	* glib/gtestutils.c (g_assertion_message_error): utility for
	those macros

	* glib/tests/keyfile.c:
	* tests/asyncqueue-test.c:
	* tests/bookmarkfile-test.c:
	* tests/convert-test.c:
	* tests/file-test.c: Use g_assert_error/g_assert_no_error

2008-09-26  Dan Winship  <danw@gnome.org>

	* glib/gthreadpool.c (wakeup_thread_marker): make this a "const
	gpointer" rather than a gconstpointer to avoid warnings later

	* glib/pcre/pcre_ucp_searchfuncs.c:
	* glib/pcre/pcre_valid_utf8.c: #include "config.h"

	* glib/tests/printf.c (test_d): fool gcc into not warning about
	some printf format strings that we know are dubious

2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 553857 – gbacktrace.h requires signal.h

	* glib/gbacktrace.h: Include signal.h for raise(). 
	Pointed out by Sebastien Bacher

2008-09-26  Matthias Clasen  <mclasen@redhat.com>
